cloud/deploy/aws/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: ghcr.io/saintslisi/cloudsystem/worker:latest
        imagePullPolicy: Always
        command: ["python", "worker_aws.py"]
        securityContext:
          privileged: true
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
      volumes:
      - name: data-volume
        hostPath:
          path: /app/data
          type: DirectoryOrCreate
