cloud/deploy/aws/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/saintslisi/cloudsystem/backend:latest
        imagePullPolicy: Always
        command: ["uvicorn", "main_aws:app", "--host", "0.0.0.0", "--port", "8000"]
        securityContext:
          privileged: true
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
      volumes:
      - name: data-volume
        hostPath:
          path: /app/data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
